# Crystallized

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/cryst/: Crystallized.h  EntryPoint.h
include/cryst/application/: Application.h
include/cryst/graphics/opengl/: OpenGL.h
include/cryst/logging/: EngineLogger.h
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: gl.h
libs/glad/src/: gl.c
src/cryst/application/: Application.cpp
src/cryst/logging/: EngineLogger.cpp
test/: CMakeLists.txt
test/src/: testMain.cpp
